# slingr

./: Cargo.toml  README.md  build.rs
src/: cli.rs  main.rs  notify.rs  serve.rs  upnp.rs
